[gd_scene load_steps=2 format=3 uid="uid://cinebpo0mb8ri"]

[ext_resource type="Script" uid="uid://cuo2tlsvlgrva" path="res://addons/protobuf/protobuf_ui_dock.gd" id="1"]

[node name="Godobuf" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -731.0
offset_bottom = -374.0
size_flags_horizontal = 0
script = ExtResource("1")

[node name="InputFileLabel" type="Label" parent="."]
layout_mode = 2
text = "Input protobuf file:"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InputFileEdit" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
editable = false

[node name="InputFileButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "..."

[node name="OutputFileButton" type="Label" parent="."]
layout_mode = 2
text = "Output GDScript file:"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OutputFileEdit" type="LineEdit" parent="HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
editable = false

[node name="OutputFileButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "..."

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="CompileButton" type="Button" parent="Control"]
layout_mode = 0
offset_top = 15.0
offset_right = 178.0
offset_bottom = 35.0
text = "Compile"

[node name="InputFileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.proto; Google Protobuf File")

[node name="InputFileDialog2" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.proto; Google Protobuf File")

[node name="OutputFileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.gd; GDScript")

[node name="FilesErrorAcceptDialog" type="AcceptDialog" parent="."]
size = Vector2i(305, 100)
dialog_text = "Need select both output & input files!"

[node name="SuccessAcceptDialog" type="AcceptDialog" parent="."]
size = Vector2i(190, 100)
dialog_text = "Compile success done."

[node name="FailAcceptDialog" type="AcceptDialog" parent="."]
size = Vector2i(343, 100)
dialog_text = "Compile fail. See details in console output."

[connection signal="pressed" from="HBoxContainer/InputFileButton" to="." method="_on_InputFileButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/OutputFileButton" to="." method="_on_OutputFileButton_pressed"]
[connection signal="pressed" from="Control/CompileButton" to="." method="_on_CompileButton_pressed"]
[connection signal="file_selected" from="InputFileDialog" to="." method="_on_InputFileDialog_file_selected"]
[connection signal="file_selected" from="InputFileDialog2" to="." method="_on_InputFileDialog_file_selected"]
[connection signal="file_selected" from="OutputFileDialog" to="." method="_on_OutputFileDialog_file_selected"]
